objects/ob1__Output_Template_Body__c.object
<CustomObject>
    <fields>
        <fullName>ob1__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ob1__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Output_Template__c</fullName>
        <label>Output Template</label>
        <referenceTo>ob1__Output_Template__c</referenceTo>
        <relationshipLabel>Output Template Bodies</relationshipLabel>
        <relationshipName>Output_Template_Bodies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ob1__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Output Template Body</label>
    <nameField>
        <displayFormat>OTB-{0}</displayFormat>
        <label>Output Template Body Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Output Template Bodies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>